@@ -23,6 +23,12 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-10-02  Cristy  <cristy@mystic.es.dupont.com>
+	* Fixed assertion error on drawing stroked text.
+
+2001-10-01  Cristy  <cristy@mystic.es.dupont.com>
+	* Added blob test to the PerlMagick test suite.
+
 2001-09-30  Cristy  <cristy@mystic.es.dupont.com>
 	* switched strcpy to strncpy to help protect against buffer
 	  overflow.
