@@ -1,3 +1,6 @@
+2001-10-02  Cristy  <cristy@mystic.es.dupont.com>
+	* Fixed assertion error on drawing stroked text.
+
 2001-10-01  Cristy  <cristy@mystic.es.dupont.com>
 	* Added blob test to the PerlMagick test suite.
 
